# Huffman-compressor

./: .gitignore  CMakeLists.txt  Codec.cpp  Codec.h  Dockerfile  FrequencyTable.cpp  FrequencyTable.h  Huffman.h  HuffmanTree.cpp  HuffmanTree.h  Node.cpp  Node.h  README.md  Utils.cpp  Utils.h  main.cpp
.github/workflows/: cicd.yml
include/: Codec.h  FrequencyTable.h  Utils.h
src/: Codec.cpp  FrequencyTable.cpp  HuffmanTree.cpp  Node.cpp  Utils.cpp  main.cpp
tests/: CMakeLists.txt  CodecTest.cpp  Generators.cpp  Generators.h  UtilsTest.cpp
